<resources>
    <string name="app_name" translatable="false">Neoland_Elena</string>
    <string name="neoland" translatable="false">NEOLAND</string>
    <string name="recordar_usuario">Recordar usuario</string>
    <string name="introduce_tu_email">Introduce tu email</string>
    <string name="email">Email</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="todo">TODO</string>

</resources>